--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#cv" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#school" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#personal" class="icon solid fa-folder"><span>Work</span></a>
+						<a href="#cv" class="icon solid fa-file"><span>Work</span></a>
+						<a href="#work" class="icon solid fa-briefcase"><span>Work</span></a>
+						<a href="#school" class="icon solid fa-graduation-cap"><span>Work</span></a>
+						<a href="#personal" class="icon solid fa-pen"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						
 					</nav>
