--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 									<h2>CV</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									My introduction.
 								</p>
 								<section>
 									<div class="row">
@@ -78,9 +76,7 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									Here you can take a peak into all my work-related projects.
 								</p>
 								<section>
 									<div class="row">
@@ -129,6 +125,9 @@
 								<header>
 									<h2>School Projects</h2>
 								</header>
+								<p>
+									Here you can take a peak into all my school-related projects.
+								</p>
 								<form action="#" method="post">
 									<div>
 										<div class="row">
@@ -157,6 +156,9 @@
 								<header>
 									<h2>Personal Projects</h2>
 								</header>
+								<p>
+									Here you can take a peak into all my personal projects.
+								</p>
 								<form action="#" method="post">
 									<div>
 										<div class="row">
@@ -184,6 +186,28 @@
 							<article id="contact" class="panel">
 								<header>
 									<h2>Contact Me</h2>
+								</header>
+								
+								<header>
+									<h4>My contact info:</h4>
+								</header>
+								<p>
+									nlamonjapujol@gmail.com
+								</p>
+								<p>
+									639649690
+								</p>
+								<p>
+									<a href="https://needlesslord.github.io/nurialamonja">Portfolio</a>
+								</p>
+								<p>
+									<a href="https://www.linkedin.com/in/needlesslord/?locale=en_US">Linkedin</a>
+								</p>
+								<p>
+									<a href="https://github.com/Needlesslord">GitHub</a>
+								</p>
+								<header>
+									<h4>Or you can also send me a message:</h4>
 								</header>
 								<form action="#" method="post">
 									<div>
@@ -213,7 +237,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; needlesslord</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
