--- a/index.html
+++ b/index.html
@@ -189,25 +189,17 @@
 								</header>
 								
 								<header>
-									<h4>My contact info:</h4>
+									<h5>My contact info:</h5>
 								</header>
 								<p>
-									nlamonjapujol@gmail.com
-								</p>
-								<p>
-									639649690
-								</p>
-								<p>
-									<a href="https://needlesslord.github.io/nurialamonja">Portfolio</a>
-								</p>
-								<p>
-									<a href="https://www.linkedin.com/in/needlesslord/?locale=en_US">Linkedin</a>
-								</p>
-								<p>
+									nlamonjapujol@gmail.com </n>
+									639649690  </n>
+									<a href="https://needlesslord.github.io/nurialamonja">Portfolio</a>  </n>
+									<a href="https://www.linkedin.com/in/needlesslord/?locale=en_US">Linkedin</a>  </n>
 									<a href="https://github.com/Needlesslord">GitHub</a>
 								</p>
 								<header>
-									<h4>Or you can also send me a message:</h4>
+									<h5>Or you can also send me a message:</h5>
 								</header>
 								<form action="#" method="post">
 									<div>
