--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
 									<h5>My contact info:</h5>
 								</header>
 								<p>
-									nlamonjapujol@gmail.com </n>
-									639649690  </n>
-									<a href="https://needlesslord.github.io/nurialamonja">Portfolio</a>  </n>
-									<a href="https://www.linkedin.com/in/needlesslord/?locale=en_US">Linkedin</a>  </n>
-									<a href="https://github.com/Needlesslord">GitHub</a>
+									nlamonjapujol@gmail.com </br>
+									639649690  </br>
+									<a href="https://needlesslord.github.io/nurialamonja">Portfolio</a>  </br>
+									<a href="https://www.linkedin.com/in/needlesslord/?locale=en_US">Linkedin</a>  </br>
+									<a href="https://github.com/Needlesslord">GitHub</br>
 								</p>
 								<header>
 									<h5>Or you can also send me a message:</h5>
